--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -47,7 +47,7 @@
         <version>2.2.0</version>
         <configuration>
           <!-- TODO: set project ID. -->
-          <deploy.projectId>sadebabay-sps-summer20</deploy.projectId>
+          <deploy.projectId>sarah-portfolio</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
       </plugin>
