--- a/portfolio/pom.xml
+++ b/portfolio/pom.xml
@@ -46,7 +46,7 @@
         <artifactId>appengine-maven-plugin</artifactId>
         <version>2.2.0</version>
         <configuration>
-          <!-- TODO: set project ID. -->
+          <!-- TODO: set project ID. Hello-->
           <deploy.projectId>sarah-portfolio</deploy.projectId>
           <deploy.version>1</deploy.version>
         </configuration>
